test/kind/wrong/rec1.kk
alias aa = bb
alias bb = aa